client/src/styles/landing.css
@import url("https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Ubuntu");

.main-text {
  margin-top: 100px;
  color: black;
  font-family: sans-serif;
  font-weight: 10;
}

.btn-lg {
  width: 150px;
}

.margin-to-button {
  margin-bottom: 50px;
}

.outer {
  height: 100vh;
  background-color: #17a2b8;
  background-size: cover;
  background-position: top;
  z-index: 1;
  position: relative;
  clip-path: polygon(
    30% 0%,
    100% 0,
    100% 30%,
    100% 81%,
    69% 82%,
    30% 87%,
    0 91%,
    0 0
  );
}

.heading-primary {
  color: white;
  text-transform: uppercase;

  backface-visibility: hidden;
  margin-bottom: 60px;
}

.heading-primary-main {
  display: block;
  font-size: 40px;
  font-weight: 700;
  letter-spacing: 24px;
  margin-bottom: 5px;

  animation-name: moveInLeft;
  animation-duration: 1s;
  animation-timing-function: ease-out;
}

.text-box {
  position: absolute;
  top: 40%;
  left: 25%;
  transform: translate(-50%, -50%);
  text-align: center;
}

.heading-primary-sub {
  display: block;
  font-size: 12px;
  font-weight: 500;
  letter-spacing: 10px;
  margin-right: 25px;
}

.login-link {
  position: absolute;
  color: white;
  font-weight: 1px;
  letter-spacing: 2px;
  transform: translate(-50%, -50%);
  top: 5%;
  left: 90%;
}

.signup-link {
  position: absolute;
  color: white;
  font-weight: 1px;
  letter-spacing: 2px;
  transform: translate(-50%, -50%);
  top: 5%;
  left: 80%;
}

.bg-modal {
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.7);
  position: absolute;
  top: 0;
  justify-content: center;
  align-items: center;
  display: flex;
}

.modal-content-signup {
  width: 500px;
  height: 580px;
  background-color: white;
  border-radius: 4px;
  text-align: center;
  padding: 20px;
  top: -50px;
  position: relative;
}

.modal-content-login {
  width: 500px;
  height: 400px;
  background-color: white;
  border-radius: 4px;
  text-align: center;
  padding: 20px;
  top: -50px;
  position: relative;
}

.modal-content-about {
  width: 500px;
  height: 200px;
  background-color: white;
  border-radius: 4px;
  text-align: center;
  padding: 20px;
  top: -50px;
  position: relative;
  overflow: auto;
}

.bg-modal-pic {
  width: 50%;
  height: 50%;
  background-color: rgba(0, 0, 0, 0.00001);
  position: absolute;
  top: 10%;
  justify-content: center;
  align-items: center;
  display: flex;
}

.modal-content-pic {
  background-size: contain;
  width: 800px;
  height: 1000px;
  background-repeat: no-repeat;
  background-image: url("../img/dashboard-main.jpg");
  top: 130%;
  right: -95%;
  position: relative;
}

.close {
  position: absolute;
  top: 0;
  right: 10px;
  font-size: 42px;
  color: #333;
  transform: rotate(45deg);
  cursor: pointer;
}

.btn-about:link,
.btn-about:visited {
  text-transform: uppercase;
  text-decoration: none;
  padding: 15px 30px;
  display: inline-block;
  border-radius: 0px;
  transition: all 0.2s;
  background-color: #fd5c63;
  color: #fff;
  font-weight: 700;
  font: "Ubuntu";
  border-radius: 100px;
}

.btn-about:hover {
  transform: translateY(-3px);
  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
  color: #777;
}

.btn-about:active {
  transform: translateY(-1px);
}

.btn:link,
.btn:visited {
  text-transform: uppercase;
  text-decoration: none;
  padding: 15px 30px;
  display: inline-block;
  border-radius: 100px;
  transition: all 0.2s;
}

.btn:hover {
  transform: translateY(-3px);
  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
  color: #777;
}

.btn:active {
  transform: translateY(-1px);
}

.btn-white {
  background-color: #fff;
  color: #777;
}

.btn-landing:hover {
  /* border-bottom: 2px solid #fff; */
  color: white;
}

.btn-landing:link,
.btn-landing:visited {
  text-decoration: none;
  padding: 10px;
  padding-bottom: 15px;
  font: times;
  font-size: 16px;
}

.un:after {
  content: "";
  margin-top: 10px;
  width: 0px;
  height: 2px;
  display: block;
  background: white;
  transition: 300ms;
}

.un:hover:after {
  width: 100%;
}

@keyframes moveInLeft {
  0% {
    opacity: 0;
    transform: translateX(-100px);
  }

  80% {
    transform: translateX(10px);
  }

  100% {
    opacity: 1;
    transform: translate(0);
  }
}

